--- a/RainmeterStudio.Rainmeter/RainmeterStudio.Rainmeter.csproj
+++ b/RainmeterStudio.Rainmeter/RainmeterStudio.Rainmeter.csproj
@@ -34,13 +34,16 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTypes\Action.cs" />
@@ -48,8 +51,10 @@
     <Compile Include="Group.cs" />
     <Compile Include="Measure.cs" />
     <Compile Include="Meter.cs" />
+    <Compile Include="Meters\StringMeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Section.cs" />
+    <Compile Include="Skin.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RainmeterStudio.Core\RainmeterStudio.Core.csproj">
